	
	* test/unit/cmath_test.cpp: Fix of the atan and atan2 tests to avoid precision
	problems.
	
	* test/unit/ptrspec_test.cpp: Add check for containers of function pointers and
	member function pointers.

	* test/unit/set_test.cpp: Add check for equal_range method when the search value
	is not in the set.

	* stlport/stl/_tree.h: Fix equal_range implementation thanks Grisha Spivak report.
	
2005-01-25  Francois Dumont  <dums@stlport...>

	* stlport/stl_user_config.h: Pointer specialization feature is now off 
	by default as it do not handle pointer to function and pointer to member
	methods correctly yet. Feature documentation has been updated to report
	this limitation.
	
	* src/ctype.h: removal of the '>= 0' check for wchar_t variables reported 
	as a always true condition by gcc.
	
	* stlport/stl/_hashtable.c: Removal of an unused variable in hashtable::resize
	method thanks Jeff Grills report.
	
	* stlport/stl/_algo.c: Fix of the search_n algo thanks Jim Xochellis report.

2005-01-24  Francois Dumont  <dums@stlport...>

	* Some more warning fixes. Mostly add of missing char_traits::to_char_type calls.
	
2005-01-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string_workaround.h, debug/_string_workaround.h: Fix of the
	call broadcast to the base class. Non debug workaround always call non debug
	base class methods, debug workaround always calls debug base class methods.

	* Many fixes to avoid warnings using MSVC in level 4 warnings:
		- while (true) replaced by for(;;) which do not produce the conditional
		expression is constant warning
		- removal of unused parameters
		- modification of some template function signature to keep the character type
		information and avoid the wchar_t to char type warning which was surely an
		important warning for the wide streams support.
		
	* stlport/stl/_monetary.c: removal of the call to the ctype::widen method 
	on the result of the moneypunct<_CharT, false>::decimal_point call as this